# kask

./: LICENSE  README.md  gradle.properties  local.properties  settings.gradle.kts  store_branding.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/css/: markdown-style.css
app/src/main/assets/js/: renderer.js
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/rhuta/kask/: KaskApplication.kt  MainActivity.kt
app/src/main/java/com/rhuta/kask/data/db/: KaskDatabase.kt
app/src/main/java/com/rhuta/kask/data/network/: DownloadManager.kt
app/src/main/java/com/rhuta/kask/data/repository/: KaskRepository.kt
app/src/main/java/com/rhuta/kask/di/: DatabaseModule.kt  EngineModule.kt
app/src/main/java/com/rhuta/kask/domain/audio/: AudioRecorder.kt
app/src/main/java/com/rhuta/kask/domain/engine/: AIEngine.kt  LlamaBridge.kt  LlamaCppEngine.kt  StubAIEngine.kt  ThinkingStateFilter.kt
app/src/main/java/com/rhuta/kask/domain/model/: Conversation.kt  ModelManager.kt  Models.kt
app/src/main/java/com/rhuta/kask/domain/util/: FileUtility.kt  MediaTruncator.kt  (+2 more)
app/src/main/java/com/rhuta/kask/service/: InferenceService.kt
app/src/main/java/com/rhuta/kask/util/: DocumentParser.kt
app/src/main/res/drawable/: ic_aini_launcher_background.xml  ic_aini_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
